--- a/src/Modal/Modal.module.css
+++ b/src/Modal/Modal.module.css
@@ -11,7 +11,7 @@
     padding-top: 60px;
 }
 
-.modal-content {
+.modalContent {
     background-color: #fefefe;
     margin: 5% auto;
     padding: 20px;
@@ -41,19 +41,19 @@
         flex-direction: column;
     }
 
-    .product-list {
+    .productList {
         flex-direction: column;
         align-items: center;
     }
 }
 
 @media (max-width: 480px) {
-    .top-bar, .auth-links, .currency-switcher {
+    .topBar, .authLinks, .currencySwitcher {
         flex-direction: column;
         align-items: center;
     }
 
-    .auth-links a {
+    .authLinks a {
         margin-left: 0;
         margin-top: 10px;
     }
