--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -49,3 +49,7 @@ nav ul li a {
 nav ul li a:hover {
     text-decoration: underline;
 }
+.cart {
+    display: flex;
+    justify-content: flex-end;
+}
